--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -33,6 +33,70 @@
 	year = {2002}
 }
 
+@article{Sherry1996,
+	abstract = {This review of literature and current information related to distance learning deals with several primary research issues. These include redefining the roles of partners in distance education teams, technology selection and adoption, design issues, methods and strategies to increase interactivity and active learning, learner characteristics, learner support, operational issues, policy and management issues, equity and accessibility, and cost/benefit tradoffs. It is intended as a companion piece to Sherry and Morse's (1995) Needs Assessment for Distance Education},
+	author = {Sherry, Lorraine},
+	file = {:home/israel/Downloads/sherry.pdf:pdf},
+	issn = {1077-9124},
+	journal = {International journal of educational {\ldots}},
+	number = {4},
+	pages = {337--365},
+	title = {{Issues in distance learning}},
+	url = {http://www.editlib.org/p/8937?nl},
+	volume = {1},
+	year = {1996}
+}
+
+@article{Almeida2010,
+	title={Tecnologia e Educa{\c{c}}{\~a}o a Dist{\^a}ncia: Abordagens e Contribui{\c{c}}{\~o}es dos Ambientes Digitais e Interativos de Aprendizagem},
+	author={de Almeida, Maria Elizabeth Bianconcini},
+	journal={Revista Brasileira de Educa{\c{c}}{\~a}o a Dist{\^a}ncia},
+	pages={6},
+	year={2010}
+}
+
+
+@article{Franciscato2008,
+	abstract = {Esse artigo apresenta, os resultados decorrentes da elabora{\c{c}}{\~{a}}o de um instrumento de avalia{\c{c}}{\~{a}}o e a sua aplica{\c{c}}{\~{a}}o nos ambientes Moodle, TelEduc e Tidia – Ae. Os question{\'{a}}rios e as an{\'{a}}lises foram realizados por alunos de P{\'{o}}s – Gradua{\c{c}}{\~{a}}o da Universidade Federal de Santa Maria, com o objetivo de proporcionar a utiliza{\c{c}}{\~{a}}o de tr{\^{e}}s ambientes distintos para ampliar as experi{\^{e}}ncias com ambientes virtuais de aprendizagem (AVAs) e desenvolver condi{\c{c}}{\~{o}}es para realizar avalia{\c{c}}{\~{o}}es cr{\'{i}}ticas. Os resultados tamb{\'{e}}m foram submetidos aos gestores de EAD e a equipe de TI para tomarem conhecimento das sugest{\~{o}}es de melhorias nos AVAs utilizados na Institi{\c{c}}{\~{a}}o (Moodle na EAD e TelEduc no ensino presencial).},
+	author = {Franciscato, F{\'{a}}bio Teixeira and Ribeiro, Patric Da Silva and Mozzaquatro, Patricia Mariotto and Medina, Roseclea Duarte},
+	file = {:home/israel/Downloads/14509-50398-1-PB.pdf:pdf},
+	journal = {Novas Tecnologias na Educa{\c{c}}{\~{a}}o},
+	keywords = {ambientes virtuais de aprendizagem,avalia{\c{c}}{\~{a}}o,distance learning,educa{\c{c}}{\~{a}}o a dist{\^{a}}ncia,evaluation,learning environments},
+	number = {2},
+	pages = {5--10},
+	title = {{Avalia{\c{c}}{\~{a}}o dos Ambientes Virtuais de Aprendizagem Moodle, TelEduc e Tidia - Ae: um estudo comparativo}},
+	volume = {6},
+	year = {2008}
+}
+
+@phdthesis{maia2003,
+	title={O uso da tecnologia de informa{\c{c}}{\~a}o para a educa{\c{c}}{\~a}o a dist{\^a}ncia no ensino superior},
+	author={Maia, Marta de Campos},
+	pages={294},
+	school = {Funda{\c{c}}{\~{a}}o Getulio Vargas},
+	year={2003}
+}
+
+@article{Alves2011,
+	abstract = {Educa{\c{c}}{\~{a}}o a Dist{\^{a}}ncia. Con- ceitos de Educa{\c{c}}{\~{a}}o a Dist{\^{a}}ncia. Educa{\c{c}}{\~{a}}o a Dist{\^{a}}ncia no Brasil. Educa{\c{c}}{\~{a}}o a Dist{\^{a}}ncia no mundo.},
+	author = {Alves, Lucineia},
+	file = {:home/israel/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Alves - 2011 - Educa{\c{c}}{\~{a}}o a dist{\^{a}}ncia conceitos e hist{\'{o}}ria no Brasil e no mundo.pdf:pdf},
+	issn = {1086 - 1362},
+	journal = {Revista Brasileira de Aprendizagem e a Dist{\^{a}}ncia},
+	number = {21},
+	pages = {83--92},
+	title = {{Educa{\c{c}}{\~{a}}o a dist{\^{a}}ncia: conceitos e hist{\'{o}}ria no Brasil e no mundo}},
+	volume = {10},
+	year = {2011}
+}
+
+@article{landim1997,
+	title={Educa{\c{c}}{\~a}o a dist{\^a}ncia: algumas considera{\c{c}}{\~o}es},
+	author={Landim, CMMPF},
+	journal={Rio de Janeiro},
+	year={1997}
+}
+
 @article{ausubel1963,
 	Address = {New York},
 	Author = {D. P. Ausubel},
