--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -494,14 +494,23 @@ Como grande parte das ferramentas para edição de mapas gráficos não foram de
 %O Moodle
 %Mapas conceituais e educação a distância.
 % ---
-\section{Teoria e origem da educação a distância}
-A educação a distância, ao contrario do que se pensa, surgiu muito antes da existência da Internet. Existem compêndios que apontam as epístolas de São Paulo a comunidades cristãs da Àsia Menor como a origem da educação a distância. Estas epístolas foram enviadas no século I e ensinavam as comunidades a viver segundo a doutrina cristã\cite{gouvea2006}.%citar
-\section{Plataformas de educação a distância}
-\section{O moodle}
+\section{Definição da educação a distância}
+\section{Origem da educação a distância}
+A educação a distância, ao contrario do que se pensa, surgiu muito antes da existência da Internet, porém a sua origem exata é alvo de controvérsias. Existem compêndios que apontam as epístolas de São Paulo a comunidades cristãs da Àsia Menor como a origem da educação a distância. Estas epístolas foram enviadas no século I e ensinavam as comunidades a viver segundo a doutrina cristã\cite{gouvea2006}.
+
+\citeonline{Sherry1996} aponta os cursos por correspondência europeus como a primeira forma de educação a distância.
+Segundo \citeonline{landim1997} inicialmente a educação a distância fazia parte de iniciativas isoladas de alguns educadores, sendo somente instituicionalizada na segunda metade do século XIX.
+
+Alguns acontecimentos importante na história da EAD foram a criação da primeira escola de línguas por correspondência em Berlin, no ano de 1856; em 1892 foi criada a Divisão de Ensino por Correspondência na Univeridade de Chicago; o nascimento da Tele Escola Primária do Ministério da Cultura e Educação, na Argentina em 1960; entre outros\cite{Alves2011}.
+
+A evolução da EAD pode ser resumida em cinco gerações, de acordo com as tecnologias utilizadas. A primeira geração seria a educação por correspondência. Já a segunda, ocorre na década de 60 e se baseia no uso do rádio e televisão. A terceira, a partir dos anos 80, é representada por softwares multimídia e acesso a Internet como forma de obtenção de conhecimento. A quarta geração consiste no uso de ambientes virtuais de aprendizagem onde a interação entre professores e estudantes é realizada através da Internet. A quinte e última é representada por ambientes de realidade virtual\cite{maia2003}.
+
+Atualmente a educação a distância está relacionada ao uso de um AVA, que consiste em um sistema computacional cuja finalidade é prover suporte a atividades mediadas pelas tecnologias de informação e comunicação\cite{Almeida2010}. Um ambiente virtual de aprendizagem tem como objetivo integrar mídias e recursos, além de apresentar informações de forma organizada e permitir interações entre estudantes, tutores e professores\cite{Franciscato2008}. Um exemplo de um AVA utilizado em algumas instituições de ensino é o Moodle.
+   
+\section{O Moodle}
 \section{Mapas conceituais e educação a distância}
 % ---
 
-\lipsum[21-22]
 
 % ---
 % segundo capitulo de Resultados
