--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -55,6 +55,16 @@
 	year={2010}
 }
 
+@article{Ribeiro2007,
+	abstract = {Este estudo tem como principal objetivo, apresentar a import{\^{a}}ncia de um ambiente virtual de aprendizagem no processo de educa{\c{c}}{\~{a}}o a dist{\^{a}}ncia (EAD). Trata-se de uma pesquisa de cunho explorat{\'{o}}rio e bibliogr{\'{a}}fico, que apresenta o hist{\'{o}}rico de crescimento da educa{\c{c}}{\~{a}}o a dist{\^{a}}ncia no Brasil e a posi{\c{c}}{\~{a}}o da Legisla{\c{c}}{\~{a}}o brasileira sobre este assunto. Atrav{\'{e}}s da evolu{\c{c}}{\~{a}}o tecnol{\'{o}}gica e o surgimento da internet foram desenvolvidos ambientes virtuais de aprendizagem. Estes ambientes oferecem funcionalidades que facilitam o desenvolvimento de cursos a dist{\^{a}}ncia. O TelEduc e o Moodle s{\~{a}}o ambientes virtuais de aprendizagem constru{\'{i}}dos para auxiliar o processo de educa{\c{c}}{\~{a}}o a dist{\^{a}}ncia. Atrav{\'{e}}s da an{\'{a}}lise desses dois ambientes e recursos que este tipo de software deve oferecer, verificamos que os ambientes virtuais de aprendizagem s{\~{a}}o {\'{u}}teis para a educa{\c{c}}{\~{a}}o a dist{\^{a}}ncia e necess{\'{a}}rios para a busca de novos dom{\'{i}}nios e novos p{\'{u}}blicos por meio da EAD.},
+	author = {Elvia Nunes Ribeiro and Mendon{\c{c}}a, Gilda Aquino de Ara{\'{u}}jo and de Mendon{\c{c}}a, Alzino Furtado},
+	file = {:home/israel/Downloads/4162007104526am.pdf:pdf},
+	journal = {Learning},
+	title = {{A import{\^{a}}ncia dos ambientes virtuais de aprendizagem na busca de novos dom{\'{i}}nios da EAD}},
+	url = {http://www.abed.org.br/congresso2007/tc/4162007104526AM.pdf},
+	year = {2007}
+}
+
 
 @article{Franciscato2008,
 	abstract = {Esse artigo apresenta, os resultados decorrentes da elabora{\c{c}}{\~{a}}o de um instrumento de avalia{\c{c}}{\~{a}}o e a sua aplica{\c{c}}{\~{a}}o nos ambientes Moodle, TelEduc e Tidia – Ae. Os question{\'{a}}rios e as an{\'{a}}lises foram realizados por alunos de P{\'{o}}s – Gradua{\c{c}}{\~{a}}o da Universidade Federal de Santa Maria, com o objetivo de proporcionar a utiliza{\c{c}}{\~{a}}o de tr{\^{e}}s ambientes distintos para ampliar as experi{\^{e}}ncias com ambientes virtuais de aprendizagem (AVAs) e desenvolver condi{\c{c}}{\~{o}}es para realizar avalia{\c{c}}{\~{o}}es cr{\'{i}}ticas. Os resultados tamb{\'{e}}m foram submetidos aos gestores de EAD e a equipe de TI para tomarem conhecimento das sugest{\~{o}}es de melhorias nos AVAs utilizados na Institi{\c{c}}{\~{a}}o (Moodle na EAD e TelEduc no ensino presencial).},
