--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -508,6 +508,19 @@ A evolução da EAD pode ser resumida em cinco gerações, de acordo com as tecn
 Atualmente a educação a distância está relacionada ao uso de um AVA, que consiste em um sistema computacional cuja finalidade é prover suporte a atividades mediadas pelas tecnologias de informação e comunicação\cite{Almeida2010}. Um ambiente virtual de aprendizagem tem como objetivo integrar mídias e recursos, além de apresentar informações de forma organizada e permitir interações entre estudantes, tutores e professores\cite{Franciscato2008}. Um exemplo de um AVA utilizado em algumas instituições de ensino é o Moodle.
    
 \section{O Moodle}
+O \begin{otherlanguage*}{english}\textit{Modular Object Oriented Distance Learning (Moodle)}\end{otherlanguage*} é um ambiente virtual de aprendizagem criado por Martin Dougiamas em 1999. Ele é uma aplicação \begin{otherlanguage*}{english}\textit{open-source}\end{otherlanguage*}, o que significa que ele é livre para ser instalado, utilizado, modificado e distribuido. Ele é amplamente usado por instituições em todo o mundo e possui uma grande comunidade que contribui para correção de erros e criação de novas ferramentas. \cite{Ribeiro2007}
+
+O \begin{otherlanguage*}{english}\textit{Moodle}\end{otherlanguage*} trabalha com cinco perfis de usuário: administrador, criador de cursos, professor, aluno e visitante. O administrador é o responsável técnico, é ele quem realiza a instalação e configuração do ambiente, além de manter ele funcionando corretamente. Já o criador de cursos tem como responsabilidade a criação e configuração dos cursos disponíveis na plataforma. Por sua vez, o professor tem como função o acompanhamento dos estudantes e a inserção de recursos e tarefas nos cursos. O aluno é quem realiza o curso, é ele quem vai utilizar os recursos e tarefas disponíveis no AVA. Por fim, o visitante é um usuário que só tem acesso as informações disponíveis na tela inicial do sistema. A \autoref{fig_moodle} mostra a interface de um curso no Moodle.
+
+\begin{figure}[htb]
+	\begin{center}
+		\includegraphics[scale=0.25]{moodle.png}
+	\end{center}
+	\caption{\label{fig_moodle}Interface de um curso no Moodle}
+\end{figure}
+
+O fato do Moodle ser modular permite que sejam desenvolvidos plugins que adicionam novas funcionalidades a plataforma, como é o caso do que está sendo desenvolvido neste trabalho.
+
 \section{Mapas conceituais e educação a distância}
 % ---
 
