--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -494,7 +494,23 @@ Como grande parte das ferramentas para edição de mapas gráficos não foram de
 %O Moodle
 %Mapas conceituais e educação a distância.
 % ---
-\section{Definição da educação a distância}
+\section{Conceituando educação a distância}
+
+A educação a distância é definida de diversas  formas por autores diferentes, apesar disso é possível extrair destas definições distintas um conceito de EAD. Alguns destes conceitos são:
+ \begin{itemize}
+ 	\item Dohemem define EAD como um sistema no qual o aluno estuda sozinho através de um material que lhe é apresentado, sendo o desempenho do estudante acompanhado por um grupo de professores. Esta forma de estudo é possivel utilizando meios de comunicação de longa distância.
+ 	\item Peters conceitua EAD como um método de compartilhar conhecimento através do uso de meios de comunicação, através do qual se torna possível instruir um grande número de alunos.
+ 	\item segundo Moore EAD é um método no qual os professores agem de forma independente das ações dos estudantes e a comunicação entre ambos deve ser feita através de meios impressos ou eletrônicos.
+ 	\item o conceito Chaves é de que a EAD é um ensino que ocorre quando há uma separação física entre mestre e aprendiz, sendo utilizadas tecnologias de transmissão de voz, dados e imagens para a comunicação entre ambos.  
+ \end{itemize} 
+ 
+ A EAD também é definida no Decreto nº 5.622 de 19 de dezembro de 2005\cite{BRASIL2005}.
+ \begin{citacao}
+ 	Art. 1o  Para os fins deste Decreto, caracteriza-se a educação a distância como modalidade educacional na qual a mediação didático-pedagógica nos processos de ensino e aprendizagem ocorre com a utilização de meios e tecnologias de informação e comunicação, com estudantes e professores desenvolvendo atividades educativas em lugares ou tempos diversos\cite{BRASIL2005}.
+ \end{citacao}
+ 
+De forma resumida é possível definir a educação a distância como um método de ensino no qual estudante e professor estão separados físicamente e que utiliza tecnologias comunicação para contornar esta separação. 
+
 \section{Origem da educação a distância}
 A educação a distância, ao contrario do que se pensa, surgiu muito antes da existência da Internet, porém a sua origem exata é alvo de controvérsias. Existem compêndios que apontam as epístolas de São Paulo a comunidades cristãs da Àsia Menor como a origem da educação a distância. Estas epístolas foram enviadas no século I e ensinavam as comunidades a viver segundo a doutrina cristã\cite{gouvea2006}.
 
