--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -65,6 +65,13 @@
 	year = {2007}
 }
 
+@article{BRASIL2005,
+	author = {BRASIL},
+	title = {{Decreto 5.622, de 19 de dezembro de 2005. Regulamenta o artigo 80 da Lei no 9.394, de 20 de dezembro de 1996, que estabelece as diretrizes e bases da educa{\c{c}}{\~{a}}o nacional.}},
+	url = {http://www.planalto.gov.br/ccivil_03/_ato2004-2006/2005/decreto/d5622.htm},
+	urldate = {2016-11-08},
+	year = {2005}
+}
 
 @article{Franciscato2008,
 	abstract = {Esse artigo apresenta, os resultados decorrentes da elabora{\c{c}}{\~{a}}o de um instrumento de avalia{\c{c}}{\~{a}}o e a sua aplica{\c{c}}{\~{a}}o nos ambientes Moodle, TelEduc e Tidia – Ae. Os question{\'{a}}rios e as an{\'{a}}lises foram realizados por alunos de P{\'{o}}s – Gradua{\c{c}}{\~{a}}o da Universidade Federal de Santa Maria, com o objetivo de proporcionar a utiliza{\c{c}}{\~{a}}o de tr{\^{e}}s ambientes distintos para ampliar as experi{\^{e}}ncias com ambientes virtuais de aprendizagem (AVAs) e desenvolver condi{\c{c}}{\~{o}}es para realizar avalia{\c{c}}{\~{o}}es cr{\'{i}}ticas. Os resultados tamb{\'{e}}m foram submetidos aos gestores de EAD e a equipe de TI para tomarem conhecimento das sugest{\~{o}}es de melhorias nos AVAs utilizados na Institi{\c{c}}{\~{a}}o (Moodle na EAD e TelEduc no ensino presencial).},
