--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -530,7 +530,7 @@ O \begin{otherlanguage*}{english}\textit{Moodle}\end{otherlanguage*} trabalha co
 
 \begin{figure}[htb]
 	\begin{center}
-		\includegraphics[scale=0.25]{moodle.png}
+		\includegraphics[scale=0.2]{moodle.png}
 	\end{center}
 	\caption{\label{fig_moodle}Interface de um curso no Moodle}
 \end{figure}
@@ -544,16 +544,32 @@ O fato do Moodle ser modular permite que sejam desenvolvidos plugins que adicion
 % ---
 % segundo capitulo de Resultados
 % ---
-\chapter{CMPAAS}
+
 % ---
 %O que é o CMPAAS?
 %Quando foi criado?
 %Porque foi criado? Qual é a sua importância?
 % ---
-\section{Pellentesque sit amet pede ac sem eleifend consectetuer}
+\chapter{CMPAAS}
+\section{Origem}
+
+Vimos como os mapas conceituais são importantes para educação, seja para auxiliar o estudante a aprender novos conceitos, ou como método de avaliação, além de algumas outras aplicações educacionais. Porém, segundo \citeonline{Perin2014} não é só no ensino que há interesse no uso de mapas conceituais e de aplicações para manipulação dos mesmos, tendo o setor empresarial um grande interesse nestas ferramentas. 
+
+Apesar de haver este grande interesse academico e empresarial em ferramentas computacionais para criação e manipulação de mapas, a fragmentação das pesquisas nesta área impede que o desenvolvimento destas aplicações ocorra de forma acelerada. Além disso, a integração de ferramentas já existentes facilitaria o progresso de novas pesquisas.
+
+Se houvesse uma infraestrutura de apoio a criação e manipulação de mapas conceituais o desenvolvimento de novas ferramentas seria facilitado. Um pesquisador poderia criar uma nova solução mais facilmente se não houvesse a necessidade dele se preocupar com toda uma estrutura de gestão de mapas. Por exemplo, alguém que queira desenvolver uma aplicação que avalie mapas conceituais poderia utilizar o conteudo existente previamente em uma solução computacional de criação e armazenamento de mapas.
+
+Um outro problema apontado por \citeonline{Perin2014} é a dificuldade que a sociedade tem para acessar os resultados das pesquisas.
+\begin{citacao}
+	Consideramos importante a criação de um mecanismo de
+	acesso eficiente aos resultados das pesquisas científicas, para que a comunidade possa contribuir para a evolução delas. O que propomos, portanto, é o lançamento de bases para uma convivência mais estreita entre o mundo acadêmico e a sociedade em geral.\cite{Perin2014}.
+\end{citacao}
 % ---
 
-\lipsum[24]
+Assim foi proposto por \citeonline{Perin2014} a criação de uma plataforma denominada CMPaaS, cujo objetivo é possibilitar que a comunidade em geral acesse o resultado de pesquisas acadêmicas e prover uma infraestrutura que permita que esta comunidade crie e estenda suas funcionalidades.
+
+\section{Arquitetura}
+
 
 \chapter{Interoperabilidade de sistemas}
 % ---
