--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -65,11 +65,23 @@
 	year = {2007}
 }
 
+@article{taurion2009,
+	author={Taurion, Cezar},
+	title={Cloud computing: computa{\c{c}}{\~a}o em nuvem: transformando o mundo da tecnologia da informa{\c{c}}{\~a}o},
+	journal={Rio de Janeiro: Brasport},
+	volume={2},
+	number={2},
+	pages={2--2},
+	year={2009}
+}
+
+
 @article{BRASIL2005,
 	author = {BRASIL},
 	title = {{Decreto 5.622, de 19 de dezembro de 2005. Regulamenta o artigo 80 da Lei no 9.394, de 20 de dezembro de 1996, que estabelece as diretrizes e bases da educa{\c{c}}{\~{a}}o nacional.}},
 	url = {http://www.planalto.gov.br/ccivil_03/_ato2004-2006/2005/decreto/d5622.htm},
 	urldate = {2016-11-08},
+	Urlaccessdate = {08/11/2016},
 	year = {2005}
 }
 
