--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -445,14 +445,15 @@ O mapas conceituais foram criados na década de 70 durante um estudo de Novak qu
 \end{citacao}
 
 Assim foi criada essa ferramenta gráfica, que tem como objetivo fazer uma representação do conhecimento. Um mapa conceitual é constituido por interligações entre dois ou mais conceitos através de uma palavra de forma a gerar um significado. Ele é construido ligando-se um conceito a outro, através de um arco que contém uma palavra descritiva, que é usada para criar uma relação significativa entre os conceitos. Além disso, os conceitos mais gerais estão dispostos no topo do mapa e os mais específicos na parte inferior dele. A \autoref{fig_mapconceitual} mostra um exemplo de mapa conceitual.
-
 \begin{figure}[htb]
+	\caption{\label{fig_mapconceitual}Um exemplo de mapa conceitual}
 	\begin{center}
 		\includegraphics[scale=0.3]{mapaconceitual.png}
 	\end{center}
-	\caption{\label{fig_mapconceitual}Um exemplo de mapa conceitual Fonte: \cite[p. 28]{Perin2014}.}
+	\legend{Fonte: \citeonline[p. 28]{Perin2014}}
 \end{figure}
 \section{Mapas conceituais e educação}
+
 Os mapas conceituais podem ter diversas aplicações na educação, podem ser utilizados para representar o conhecimento adquirido em uma aula, ou então o conteúdo de um capítulo algum livro lido. Por se tratar de uma representação que é alimentada com novos conceitos conforme eles são adquiridos, pode ser utilizado pelo professor para acompanhar a aprendizagem de um estudante durante todo o período de um curso. Além disso, como os mapas conseguem representar a estrutura cognitiva de um indivíduo, eles podem ser utilizados também como método de avaliação de aprendizagem\cite{Perin2014}.
 
 A confiabilidade da avaliação da aprendizagem tradicional,como textos dissertativos e questões de multipla escolha, tem sido questionada por pesquisadores e educadores. Nestes tipos de teste apenas os acertos são contabilizados e os erros são descartados, isto pode fazer com que informações importantes para a avaliação sejam desprezadas.
@@ -463,13 +464,13 @@ Os mapas conceituais tem se destacado como alternativa a avaliação tradicional
 
 A construção de mapas conceituais é muito simples, uma caneta e um pedaço de papel são ferramentas suficientes para a confecção desse grafo. Porém a tarefa de revisa-lo, armazena-lo, e edita-lo a longo prazo  pode ser muito cansativa e complexa. A introdução do uso de computadores na confecção de mapas pode facilitar a tarefa \cite{Novak2006}.
 
-Os primeiros programas de computadores criados com este objetivo se limitavam a mostrar os mapas na tela, sem oferecer nenhum recurso adicional a ferramenta. Com a popularização do uso de computadores e da Internet houve um aumento na oferta de aplicações que tem como objetivo a construção de mapas gráficos. Porém há uma grande confusão entre usuários e desenvolvedores sobre a diferença entre mapas conceituais, organogramas e mapas mentais\cite{Perin2014}. Segundo a pesquisa de \citeonline{Perin2014}, apenas o software CmapTools pode ser considerada uma ferramenta que oferece suporte a criação de mapas conceituais.
+Os primeiros programas de computadores criados com este objetivo se limitavam a mostrar apenas os mapas na tela, sem oferecer nenhum recurso adicional a ferramenta. Com a popularização do uso de computadores e da Internet houve um aumento na oferta de aplicações que tem como objetivo a construção de mapas gráficos. Porém há uma grande confusão entre usuários e desenvolvedores sobre a diferença entre mapas conceituais, organogramas e mapas mentais, devido a semelhança entre os diagramas\cite{Perin2014}. Por exemplo, um mapa mental apresenta ligações entre ideias, o que é muito semelhante a um mapa conceitual, porém o primeiro não apresenta uma palavra descrevendo as ligações. Portanto uma aplicação de criação de mapas mentais não permite a construção de um mapa conceitual. Segundo a pesquisa de \citeonline{Perin2014}, apenas o software CmapTools pode ser considerada uma ferramenta que oferece suporte a criação de mapas conceituais.
 
 \begin{citacao}[english]
 	CmapTools  is  a  software  environment  developed  at  the  Institute for Human and Machine Cognition (IHMC) that empowers users, individually or  collaboratively, to represent their knowledge using concept maps, to share them with peers and colleagues, and to publish them\cite{Canas2004}.
 \end{citacao}
 
-Como grande parte das ferramentas para edição de mapas gráficos não foram desenvolvidas especificamente para prover um ambiente de criação de mapas conceituais é possível levantar a hipótese de que há uma carência deste tipo de software. Isto é um elemento motivador para a realização deste trabalho.
+Observamos uma carência de softwares que permitam a construção e edição de mapas conceituais. Grande parte das ferramentas para manipulação de mapas gráficos não foram desenvolvidas especificamente para criação de mapas conceituais, e esta foi a grande motivação que tivemos para a realização deste trabalho, visto que, esses mapas consistem em uma ferramenta que tem potencial para inovar o sistema de aprendizagem que conhecemos, principalmente na educação à distância
   
 
 %\lipsum[1]
@@ -496,7 +497,7 @@ Como grande parte das ferramentas para edição de mapas gráficos não foram de
 % ---
 \section{Conceituando educação a distância}
 
-A educação a distância é definida de diversas  formas por autores diferentes, apesar disso é possível extrair destas definições distintas um conceito de EAD. Alguns destes conceitos são:
+A educação a distância é definida de diversas  formas por autores diferentes, apesar disso é possível extrair destas definições distintas um conceito de EAD. Abaixo alguns exemplos dessas definições:
  \begin{itemize}
  	\item Dohemem define EAD como um sistema no qual o aluno estuda sozinho através de um material que lhe é apresentado, sendo o desempenho do estudante acompanhado por um grupo de professores. Esta forma de estudo é possivel utilizando meios de comunicação de longa distância.
  	\item Peters conceitua EAD como um método de compartilhar conhecimento através do uso de meios de comunicação, através do qual se torna possível instruir um grande número de alunos.
@@ -509,7 +510,7 @@ A educação a distância é definida de diversas  formas por autores diferentes
  	Art. 1o  Para os fins deste Decreto, caracteriza-se a educação a distância como modalidade educacional na qual a mediação didático-pedagógica nos processos de ensino e aprendizagem ocorre com a utilização de meios e tecnologias de informação e comunicação, com estudantes e professores desenvolvendo atividades educativas em lugares ou tempos diversos\cite{BRASIL2005}.
  \end{citacao}
  
-De forma resumida é possível definir a educação a distância como um método de ensino no qual estudante e professor estão separados físicamente e que utiliza tecnologias comunicação para contornar esta separação. 
+Em sintese é possível definir a educação a distância como um método de ensino no qual estudante e professor ficam separados físicamente e a interaçao e feita através de tecnologias de comunicação (que podem ser dos mais diversos) de maneira a contornar esta separação. Hoje em dia, como sabemos, utiliza-se a Internet como meio de interação entre professor e alunos, mas antes da Internet outras tecnologias de comunicação fizeram parte da historia da educação a distância permitindo que o aprendizado de cursos diversos não precisassem obrigatoriamente de uma sala de aula, o que abriu horizontes para professores e alunos.
 
 \section{Origem da educação a distância}
 A educação a distância, ao contrario do que se pensa, surgiu muito antes da existência da Internet, porém a sua origem exata é alvo de controvérsias. Existem compêndios que apontam as epístolas de São Paulo a comunidades cristãs da Àsia Menor como a origem da educação a distância. Estas epístolas foram enviadas no século I e ensinavam as comunidades a viver segundo a doutrina cristã\cite{gouvea2006}.
@@ -521,21 +522,22 @@ Alguns acontecimentos importante na história da EAD foram a criação da primei
 
 A evolução da EAD pode ser resumida em cinco gerações, de acordo com as tecnologias utilizadas. A primeira geração seria a educação por correspondência. Já a segunda, ocorre na década de 60 e se baseia no uso do rádio e televisão. A terceira, a partir dos anos 80, é representada por softwares multimídia e acesso a Internet como forma de obtenção de conhecimento. A quarta geração consiste no uso de ambientes virtuais de aprendizagem onde a interação entre professores e estudantes é realizada através da Internet. A quinte e última é representada por ambientes de realidade virtual\cite{maia2003}.
 
-Atualmente a educação a distância está relacionada ao uso de um AVA, que consiste em um sistema computacional cuja finalidade é prover suporte a atividades mediadas pelas tecnologias de informação e comunicação\cite{Almeida2010}. Um ambiente virtual de aprendizagem tem como objetivo integrar mídias e recursos, além de apresentar informações de forma organizada e permitir interações entre estudantes, tutores e professores\cite{Franciscato2008}. Um exemplo de um AVA utilizado em algumas instituições de ensino é o Moodle.
+Atualmente a educação a distância está relacionada ao uso de um AVA, que nada mais é que um sistema computacional cuja finalidade é prover suporte a atividades mediadas pelas tecnologias de informação e comunicação\cite{Almeida2010}. É um ambiente virtual de aprendizagem que tem como objetivo integrar mídias e recursos, além de apresentar informações de forma organizada e permitir interação entre estudantes, tutores e professores\cite{Franciscato2008}. Um exemplo de um AVA utilizado em algumas instituições de ensino é o Moodle.
    
 \section{O Moodle}
-O \begin{otherlanguage*}{english}\textit{Modular Object Oriented Distance Learning (Moodle)}\end{otherlanguage*} é um ambiente virtual de aprendizagem criado por Martin Dougiamas em 1999. Ele é uma aplicação \begin{otherlanguage*}{english}\textit{open-source}\end{otherlanguage*}, o que significa que ele é livre para ser instalado, utilizado, modificado e distribuido. Ele é amplamente usado por instituições em todo o mundo e possui uma grande comunidade que contribui para correção de erros e criação de novas ferramentas. \cite{Ribeiro2007}
+O \begin{otherlanguage*}{english}\textit{Modular Object Oriented Distance Learning (Moodle)}\end{otherlanguage*} é um ambiente virtual de aprendizagem que foi criado por Martin Dougiamas em 1999. Ele é uma aplicação \begin{otherlanguage*}{english}\textit{open-source}\end{otherlanguage*}, o que significa que ele é livre para ser instalado, utilizado, modificado e distribuido. Ele é amplamente usado por instituições em todo o mundo e possui uma grande comunidade que contribui para correção de erros e criação de novas ferramentas. \cite{Ribeiro2007}
 
 O \begin{otherlanguage*}{english}\textit{Moodle}\end{otherlanguage*} trabalha com cinco perfis de usuário: administrador, criador de cursos, professor, aluno e visitante. O administrador é o responsável técnico, é ele quem realiza a instalação e configuração do ambiente, além de manter ele funcionando corretamente. Já o criador de cursos tem como responsabilidade a criação e configuração dos cursos disponíveis na plataforma. Por sua vez, o professor tem como função o acompanhamento dos estudantes e a inserção de recursos e tarefas nos cursos. O aluno é quem realiza o curso, é ele quem vai utilizar os recursos e tarefas disponíveis no AVA. Por fim, o visitante é um usuário que só tem acesso as informações disponíveis na tela inicial do sistema. A \autoref{fig_moodle} mostra a interface de um curso no Moodle.
 
+
 \begin{figure}[htb]
+	\caption{\label{fig_moodle}Interface de um curso no Moodle}
 	\begin{center}
 		\includegraphics[scale=0.2]{moodle.png}
 	\end{center}
-	\caption{\label{fig_moodle}Interface de um curso no Moodle}
+	\legend{Fonte: Elaborada pelo autor}
 \end{figure}
-
-O fato do Moodle ser modular permite que sejam desenvolvidos plugins que adicionam novas funcionalidades a plataforma, como é o caso do que está sendo desenvolvido neste trabalho.
+O fato do Moodle ser modular, ou seja, ser composto por módulos instaláveis, configuráveis e estendíveis,  permite que sejam desenvolvidos plugins e componentes que adicionam novas funcionalidades a plataforma, como é o caso do que está sendo desenvolvido neste trabalho.
 
 \section{Mapas conceituais e educação a distância}
 % ---
@@ -582,24 +584,27 @@ O CMPaaS é uma plataforma orientada a serviços, ou seja, ela utiliza a arquite
 
 A plataforma foi implementada com a utilização de Web Services, que precisam de uma aplicação com interface para serem consumidos. Assim, o CMPaaS precisa estar associado a um portal que permitirá que o usuário final utilize as ferramentas oferecidas pela plataforma. Este portal foi nomeado como "Portal do Conhecimento"\cite{Perin2014}. 
 
+
 \begin{figure}[htb]
+	\caption{\label{fig_cmpaas}(a) Integração do Portal do Conhecimento com o CMPaaS. (b) Integração do CMPaaS com serviços externos}
 	\begin{center}
 		\includegraphics[scale=0.3]{cmpaas.png}
 	\end{center}
-	\caption{\label{fig_cmpaas}(a) Integração do Portal do Conhecimento com o CMPaaS. (b) Integração do CMPaaS com serviços externos.}
-\end{figure} 
+	\legend{Fonte: \citeonline[p. 81]{Perin2014}}
+\end{figure}
 
 A \autoref{fig_cmpaas} ilustra a arquiterura do CMPaaS. Podemos observar como as aplicações fornecidas pelo portal utilizam os serviços da plataforma, muitas vezes consumindo mais de um serviço que é oferecido por ela. Além disso, é ilutrado também como um portal externo pode aproveitar os serviços disponíveis no CMPaaS, como é o caso do plugin que será apresentado posteriormente neste trabalho. Ele trata-se de um editor de mapas conceituais que armazena os mapas, criados por ele, na plataforma. Assim ele utiliza dois serviços fornecidos pelo CMPaaS, o de armazenagem de mapas e o de autenticação. 
 
 A estrutura interna da plataforma é composta por cinco camadas\cite{Perin2014}, conforme mostra a \autoref{fig_cmpaas2}.
 
+
 \begin{figure}[htb]
+	\caption{\label{fig_cmpaas2} Arquitetura do CMPaaS}
 	\begin{center}
 		\includegraphics[scale=0.3]{cmpaas2.png}
 	\end{center}
-	\caption{\label{fig_cmpaas2}(a) Integração do Portal do Conhecimento com o CMPaaS. (b) Integração do CMPaaS com serviços externos.}
-\end{figure}   
-
+	\legend{Fonte: \citeonline[p. 82]{Perin2014}}
+\end{figure}
 
 \chapter{Interoperabilidade de sistemas}
 % ---
